--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://12f.dk"
 languageCode: "en-us"
-title: "12F.dk"
+title: "12F - Modernize your business"
 theme: hugo-profile
 
 outputs:
